--- a/lesson_4/lesson_4.ipynb
+++ b/lesson_4/lesson_4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,26 @@
     "plt.xlabel('a')\n",
     "plt.ylabel('x')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 * Pi / a\n",
+      "2.0 * Pi / a\n",
+      "3.0 * Pi / a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ki in k:\n",
+    "    print(f\"{ki} * Pi / a\")"
    ]
   },
   {
